fix: use create attributes rather than the whole object, provide deployment
